# xLLMs

./: .all-contributorsrc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: dependabot.yml  stale.yml
backends/: cuda_backend.c  cuda_backend.h
cmake/: xllm_config.h.in
docs/: api-reference.md  architecture.md  lru-k-eviction.md  memory-manager.md  prefix-sharing.md
docs/design/: flashinfer_analysis.md  sglang_radixcache_analysis.md  tensorrt_llm_analysis.md  v0.5-blueprint.md
examples/: load_model.c  run_gpt2.c  text_gen.c
include/: backend.h  operator_api.h  prefix_sharing.h  tensorrt_adapter.h
operators/: activation_kernels.cu  cache.py  flashinfer_adapter.cu  page_attention.cu  page_attention_v2.cu
scripts/: convert_gpt2_weights.py
src/adapter/: tensorrt_adapter.c
src/core/: backend_manager.c  lru_k.c  memory_manager.c  model_loader.c  prefix_sharing.c  scheduler.c
src/include/: decoder.h  lru_k.h  model_loader.h  page_pool.h  tokenizer.h  transformer_block.h  weight_loader.h
src/inference/: decode_loop.c  tokenizer.c  transformer_block.c  weight_loader.c
tests/: mock_cuda_backend.c  test_attention.c  test_attention_bench.c  test_backend.c  test_backend_load.c  test_model_loader.c  test_model_version.c  test_page_pool.c  test_prefix_sharing.c  test_scheduler.c  test_tensorrt_integration.c
